--- a/app/src/main/res/layout/fragment_notas.xml
+++ b/app/src/main/res/layout/fragment_notas.xml
@@ -93,6 +93,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="60dp"
+            android:layout_marginBottom="5dp"
             android:text="@string/credits"
             android:textAlignment="center"
             app:layout_constraintBottom_toBottomOf="parent"
