--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,7 +39,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@color/primary_color"
-        android:text="@string/calculadora_button"
+        android:onClick="navigateToCalculator"
+        android:text="@string/calculator_button"
         android:textColor="@color/white"
         android:textColorHighlight="@color/primary_color"
         android:textColorHint="@color/primary_color"
@@ -56,7 +57,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@color/primary_color"
-        android:text="@string/notas_button"
+        android:onClick="navigateToGrades"
+        android:text="@string/grades_button"
         android:textSize="16sp"
         app:backgroundTint="@color/primary_color"
         app:backgroundTintMode="add"
@@ -65,6 +67,7 @@
         app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
     <FrameLayout
+        android:id="@+id/contentFrame"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
