--- a/app/src/main/res/layout/fragment_calculator.xml
+++ b/app/src/main/res/layout/fragment_calculator.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".controllers.CalculadoraFragment">
+    tools:context=".controllers.CalculatorFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -55,7 +55,7 @@
             android:id="@+id/buttonMultiplication"
             android:layout_width="75sp"
             android:layout_height="75sp"
-            android:layout_marginStart="40dp"
+            android:layout_marginStart="24dp"
             android:layout_marginTop="28dp"
             android:background="@color/primary_color"
             android:text="@string/button_multiplication"
@@ -109,7 +109,7 @@
             android:id="@+id/buttonNine"
             android:layout_width="75sp"
             android:layout_height="75sp"
-            android:layout_marginStart="40dp"
+            android:layout_marginStart="24dp"
             android:layout_marginTop="28dp"
             android:background="@color/primary_color"
             android:text="@string/button_nine"
@@ -150,7 +150,7 @@
             android:id="@+id/buttonFive"
             android:layout_width="75sp"
             android:layout_height="75sp"
-            android:layout_marginStart="40dp"
+            android:layout_marginStart="24dp"
             android:layout_marginTop="28dp"
             android:background="@color/primary_color"
             android:text="@string/button_five"
@@ -164,6 +164,7 @@
             android:layout_width="75sp"
             android:layout_height="75sp"
             android:layout_marginStart="16dp"
+            android:layout_marginTop="40dp"
             android:background="@color/primary_color"
             android:text="@string/button_four"
             android:textSize="34sp"
@@ -171,7 +172,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/buttonThree"
-            tools:layout_editor_absoluteY="235dp" />
+            app:layout_constraintTop_toBottomOf="@+id/textView" />
 
         <Button
             android:id="@+id/buttonEight"
@@ -206,24 +207,26 @@
             android:layout_width="75sp"
             android:layout_height="75sp"
             android:layout_marginStart="16dp"
+            android:layout_marginTop="40dp"
             android:background="@color/primary_color"
             android:text="@string/button_three"
             android:textSize="34sp"
             app:backgroundTint="@color/primary_color"
             app:layout_constraintStart_toEndOf="@+id/buttonTwo"
-            tools:layout_editor_absoluteY="235dp" />
+            app:layout_constraintTop_toBottomOf="@+id/textView" />
 
         <Button
             android:id="@+id/buttonTwo"
             android:layout_width="75sp"
             android:layout_height="75sp"
             android:layout_marginStart="16dp"
+            android:layout_marginTop="40dp"
             android:background="@color/primary_color"
             android:text="@string/button_two"
             android:textSize="34sp"
             app:backgroundTint="@color/primary_color"
             app:layout_constraintStart_toEndOf="@+id/buttonOne"
-            tools:layout_editor_absoluteY="235dp" />
+            app:layout_constraintTop_toBottomOf="@+id/textView" />
 
         <EditText
             android:id="@+id/resultadoCalculadora"
@@ -233,6 +236,7 @@
             android:background="@color/edit_text_color"
             android:editable="false"
             android:ems="10"
+            android:enabled="false"
             android:inputType="text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.497"
@@ -244,7 +248,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="44dp"
-            android:text="@string/calculadora_result"
+            android:text="@string/calculator_result"
             android:textSize="34sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.107"
@@ -255,13 +259,14 @@
             android:id="@+id/buttonOne"
             android:layout_width="75sp"
             android:layout_height="75sp"
-            android:layout_marginStart="40dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="40dp"
             android:background="@color/primary_color"
             android:text="@string/button_one"
             android:textSize="34sp"
             app:backgroundTint="@color/primary_color"
             app:layout_constraintStart_toStartOf="parent"
-            tools:layout_editor_absoluteY="235dp" />
+            app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
