--- a/app/src/main/res/layout/fragment_grades.xml
+++ b/app/src/main/res/layout/fragment_grades.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".controllers.NotasFragment">
+    tools:context=".controllers.GradesFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -14,10 +14,10 @@
             android:id="@+id/editTextNota3"
             android:layout_width="300sp"
             android:layout_height="50sp"
-            android:layout_marginTop="60dp"
+            android:layout_marginTop="44dp"
             android:background="@color/edit_text_color"
             android:ems="10"
-            android:hint="@string/nota3_hint"
+            android:hint="@string/grade3_hint"
             android:inputType="numberDecimal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.495"
@@ -28,10 +28,10 @@
             android:id="@+id/editTextNota2"
             android:layout_width="300sp"
             android:layout_height="50sp"
-            android:layout_marginTop="60dp"
+            android:layout_marginTop="44dp"
             android:background="@color/edit_text_color"
             android:ems="10"
-            android:hint="@string/nota2_hint"
+            android:hint="@string/grade2_hint"
             android:inputType="numberDecimal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.495"
@@ -43,7 +43,7 @@
             android:layout_width="wrap_content"
             android:layout_height="50sp"
             android:layout_marginTop="32dp"
-            android:text="@string/notas_title"
+            android:text="@string/grades_title"
             android:textSize="34sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
@@ -54,22 +54,23 @@
             android:id="@+id/editTextNota1"
             android:layout_width="300sp"
             android:layout_height="50sp"
+            android:layout_marginTop="32dp"
             android:background="@color/edit_text_color"
             android:ems="10"
-            android:hint="@string/nota1_hint"
+            android:hint="@string/grade1_hint"
             android:inputType="numberDecimal"
             android:shadowColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.497"
+            app:layout_constraintHorizontal_bias="0.495"
             app:layout_constraintStart_toStartOf="parent"
-            tools:layout_editor_absoluteY="129dp" />
+            app:layout_constraintTop_toBottomOf="@+id/notasTitle" />
 
         <TextView
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="60dp"
-            android:text="@string/situacao_media"
+            android:text="@string/situation"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.204"
@@ -80,9 +81,9 @@
             android:id="@+id/button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="80dp"
+            android:layout_marginTop="84dp"
             android:background="@color/black"
-            android:text="@string/calcular_media_button"
+            android:text="@string/calculate_average_button"
             app:backgroundTint="@color/primary_color"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
