--- a/app/src/main/res/layout/fragment_grades.xml
+++ b/app/src/main/res/layout/fragment_grades.xml
@@ -11,7 +11,7 @@
         android:layout_height="match_parent">
 
         <EditText
-            android:id="@+id/editTextNota3"
+            android:id="@+id/editTextGrade3"
             android:layout_width="300sp"
             android:layout_height="50sp"
             android:layout_marginTop="44dp"
@@ -22,10 +22,10 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.495"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editTextNota2" />
+            app:layout_constraintTop_toBottomOf="@+id/editTextGrade2" />
 
         <EditText
-            android:id="@+id/editTextNota2"
+            android:id="@+id/editTextGrade2"
             android:layout_width="300sp"
             android:layout_height="50sp"
             android:layout_marginTop="44dp"
@@ -36,7 +36,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.495"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editTextNota1" />
+            app:layout_constraintTop_toBottomOf="@+id/editTextGrade1" />
 
         <TextView
             android:id="@+id/notasTitle"
@@ -51,7 +51,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
-            android:id="@+id/editTextNota1"
+            android:id="@+id/editTextGrade1"
             android:layout_width="300sp"
             android:layout_height="50sp"
             android:layout_marginTop="32dp"
@@ -75,10 +75,10 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.204"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editTextNota3" />
+            app:layout_constraintTop_toBottomOf="@+id/editTextGrade3" />
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/calculateAverageButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="84dp"
@@ -101,8 +101,18 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/button"
+            app:layout_constraintTop_toBottomOf="@+id/calculateAverageButton"
             app:layout_constraintVertical_bias="0.852" />
+
+        <TextView
+            android:id="@+id/situationTextView"
+            android:layout_width="150sp"
+            android:layout_height="25sp"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="68dp"
+            android:textAlignment="center"
+            app:layout_constraintStart_toEndOf="@+id/textView3"
+            app:layout_constraintTop_toBottomOf="@+id/editTextGrade3" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
