--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,7 +35,7 @@
         app:layout_constraintGuide_percent="0.5" />
 
     <Button
-        android:id="@+id/calculadoraButton"
+        android:id="@+id/calculatorButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@color/primary_color"
@@ -47,21 +47,25 @@
         android:textColorLink="@color/primary_color"
         android:textSize="16sp"
         app:backgroundTint="@color/primary_color"
-        app:backgroundTintMode="add"
+        app:backgroundTintMode="src_in"
         app:layout_constraintEnd_toStartOf="@+id/guideline"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
     <Button
-        android:id="@+id/notasButton"
+        android:id="@+id/gradesButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@color/primary_color"
         android:onClick="navigateToGrades"
         android:text="@string/grades_button"
+        android:textColor="@color/white"
+        android:textColorHighlight="@color/primary_color"
+        android:textColorHint="@color/primary_color"
+        android:textColorLink="@color/primary_color"
         android:textSize="16sp"
         app:backgroundTint="@color/primary_color"
-        app:backgroundTintMode="add"
+        app:backgroundTintMode="src_in"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/guideline"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
@@ -73,7 +77,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/calculadoraButton">
+        app:layout_constraintTop_toBottomOf="@+id/calculatorButton">
 
     </FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
