Retira texto de resultado da calculadora

--- a/app/src/main/res/layout/fragment_calculator.xml
+++ b/app/src/main/res/layout/fragment_calculator.xml
@@ -33,6 +33,7 @@
             android:layout_marginTop="28dp"
             android:background="@color/primary_color"
             android:text="@string/button_delete"
+            android:textColor="@color/white"
             android:textSize="15sp"
             app:backgroundTint="@color/primary_color"
             app:layout_constraintStart_toEndOf="@+id/buttonDivision"
@@ -46,6 +47,7 @@
             android:layout_marginTop="28dp"
             android:background="@color/primary_color"
             android:text="@string/button_division"
+            android:textColor="@color/white"
             android:textSize="34sp"
             app:backgroundTint="@color/primary_color"
             app:layout_constraintStart_toEndOf="@+id/buttonMultiplication"
@@ -59,6 +61,7 @@
             android:layout_marginTop="28dp"
             android:background="@color/primary_color"
             android:text="@string/button_multiplication"
+            android:textColor="@color/white"
             android:textSize="34sp"
             app:backgroundTint="@color/primary_color"
             app:layout_constraintStart_toStartOf="parent"
@@ -72,6 +75,7 @@
             android:layout_marginTop="28dp"
             android:background="@color/primary_color"
             android:text="@string/button_subtraction"
+            android:textColor="@color/white"
             android:textSize="34sp"
             app:backgroundTint="@color/primary_color"
             app:layout_constraintEnd_toEndOf="parent"
@@ -87,6 +91,7 @@
             android:layout_marginTop="28dp"
             android:background="@color/primary_color"
             android:text="@string/button_addition"
+            android:textColor="@color/white"
             android:textSize="34sp"
             app:backgroundTint="@color/primary_color"
             app:layout_constraintStart_toEndOf="@+id/buttonZero"
@@ -100,6 +105,7 @@
             android:layout_marginTop="28dp"
             android:background="@color/primary_color"
             android:text="@string/button_zero"
+            android:textColor="@color/white"
             android:textSize="34sp"
             app:backgroundTint="@color/primary_color"
             app:layout_constraintStart_toEndOf="@+id/buttonNine"
@@ -113,6 +119,7 @@
             android:layout_marginTop="28dp"
             android:background="@color/primary_color"
             android:text="@string/button_nine"
+            android:textColor="@color/white"
             android:textSize="34sp"
             app:backgroundTint="@color/primary_color"
             app:layout_constraintStart_toStartOf="parent"
@@ -126,6 +133,7 @@
             android:layout_marginTop="28dp"
             android:background="@color/primary_color"
             android:text="@string/button_equal"
+            android:textColor="@color/white"
             android:textSize="34sp"
             app:backgroundTint="@color/primary_color"
             app:layout_constraintEnd_toEndOf="parent"
@@ -141,6 +149,7 @@
             android:layout_marginTop="28dp"
             android:background="@color/primary_color"
             android:text="@string/button_six"
+            android:textColor="@color/white"
             android:textSize="34sp"
             app:backgroundTint="@color/primary_color"
             app:layout_constraintStart_toEndOf="@+id/buttonFive"
@@ -154,6 +163,7 @@
             android:layout_marginTop="28dp"
             android:background="@color/primary_color"
             android:text="@string/button_five"
+            android:textColor="@color/white"
             android:textSize="34sp"
             app:backgroundTint="@color/primary_color"
             app:layout_constraintStart_toStartOf="parent"
@@ -164,15 +174,16 @@
             android:layout_width="75sp"
             android:layout_height="75sp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="92dp"
             android:background="@color/primary_color"
             android:text="@string/button_four"
+            android:textColor="@color/white"
             android:textSize="34sp"
             app:backgroundTint="@color/primary_color"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/buttonThree"
-            app:layout_constraintTop_toBottomOf="@+id/textView" />
+            app:layout_constraintTop_toBottomOf="@+id/resultadoCalculadora" />
 
         <Button
             android:id="@+id/buttonEight"
@@ -182,6 +193,7 @@
             android:layout_marginTop="28dp"
             android:background="@color/primary_color"
             android:text="@string/button_eight"
+            android:textColor="@color/white"
             android:textSize="34sp"
             app:backgroundTint="@color/primary_color"
             app:layout_constraintEnd_toEndOf="parent"
@@ -197,6 +209,7 @@
             android:layout_marginTop="28dp"
             android:background="@color/primary_color"
             android:text="@string/button_seven"
+            android:textColor="@color/white"
             android:textSize="34sp"
             app:backgroundTint="@color/primary_color"
             app:layout_constraintStart_toEndOf="@+id/buttonSix"
@@ -207,66 +220,57 @@
             android:layout_width="75sp"
             android:layout_height="75sp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="92dp"
             android:background="@color/primary_color"
             android:text="@string/button_three"
+            android:textColor="@color/white"
             android:textSize="34sp"
             app:backgroundTint="@color/primary_color"
             app:layout_constraintStart_toEndOf="@+id/buttonTwo"
-            app:layout_constraintTop_toBottomOf="@+id/textView" />
+            app:layout_constraintTop_toBottomOf="@+id/resultadoCalculadora" />
 
         <Button
             android:id="@+id/buttonTwo"
             android:layout_width="75sp"
             android:layout_height="75sp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="92dp"
             android:background="@color/primary_color"
             android:text="@string/button_two"
+            android:textColor="@color/white"
             android:textSize="34sp"
             app:backgroundTint="@color/primary_color"
             app:layout_constraintStart_toEndOf="@+id/buttonOne"
-            app:layout_constraintTop_toBottomOf="@+id/textView" />
+            app:layout_constraintTop_toBottomOf="@+id/resultadoCalculadora" />
 
         <EditText
             android:id="@+id/resultadoCalculadora"
             android:layout_width="300sp"
             android:layout_height="50sp"
-            android:layout_marginTop="36dp"
+            android:layout_marginTop="72dp"
             android:background="@color/edit_text_color"
-            android:editable="false"
+            android:editable="true"
             android:ems="10"
             android:enabled="false"
             android:inputType="text"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.497"
+            app:layout_constraintHorizontal_bias="0.495"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="44dp"
-            android:text="@string/calculator_result"
-            android:textSize="34sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.107"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/resultadoCalculadora" />
 
         <Button
             android:id="@+id/buttonOne"
             android:layout_width="75sp"
             android:layout_height="75sp"
             android:layout_marginStart="24dp"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="92dp"
             android:background="@color/primary_color"
             android:text="@string/button_one"
+            android:textColor="@color/white"
             android:textSize="34sp"
             app:backgroundTint="@color/primary_color"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView" />
+            app:layout_constraintTop_toBottomOf="@+id/resultadoCalculadora" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
